part-3/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: dwk-exercises-namespace
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3002
